--- a/package.json
+++ b/package.json
@@ -22,17 +22,22 @@
     "react-router": "^4.3.1",
     "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "webpack-dev-server": "^3.1.10",
+    "webpack-merge": "^4.1.4"
   },
   "scripts": {
-    "start": "node_modules/.bin/webpack-dev-server --mode development --open --hot",
-    "build": "node_modules/.bin/webpack --config webpack.prod.js --mode production",
-    "serve": "node_modules/.bin/http-server ./dist",
-    "test": "jest"
+    "start": "node_modules/.bin/webpack-dev-server --config webpack.dev.js",
+    "build": "node_modules/.bin/webpack --config webpack.prod.js",
+    "test": "node_modules/.bin/jest"
   },
   "jest": {
-    "roots": ["./src/components/"],
-    "testPathIgnorePatterns": ["/node_modules/"]
+    "roots": [
+      "./src/components/"
+    ],
+    "testPathIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "verbose": true
   },
   "author": "Nikolai Artemev",
   "license": "ISC"
