--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10",
-    "webpack-merge": "^4.1.4"
+    "webpack-merge": "^4.1.4",
+    "cross-env": "^5.2.0"
   },
   "scripts": {
-    "start": "node_modules/.bin/webpack-dev-server --config webpack.dev.js",
-    "build": "node_modules/.bin/webpack --config webpack.prod.js",
+    "start": "node_modules/.bin/cross-env NODE_ENV=development node_modules/.bin/webpack-dev-server --config webpack.index.js",
+    "build": "node_modules/.bin/cross-env NODE_ENV=production node_modules/.bin/webpack --config webpack.index.js",
     "test": "node_modules/.bin/jest"
   },
   "jest": {
