--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "cross-env": "^5.2.0"
   },
   "scripts": {
-    "start": "node_modules/.bin/cross-env NODE_ENV=development node_modules/.bin/webpack-dev-server --config webpack.index.js",
-    "build": "node_modules/.bin/cross-env NODE_ENV=production node_modules/.bin/webpack --config webpack.index.js",
+    "start": "node_modules/.bin/cross-env NODE_ENV=development node_modules/.bin/webpack-dev-server --config ./webpack",
+    "build": "node_modules/.bin/cross-env NODE_ENV=production node_modules/.bin/webpack --config ./webpack",
     "test": "node_modules/.bin/jest"
   },
   "jest": {
