--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "style-loader": "^0.23.1"
   },
   "devDependencies": {
     "babel": "^6.23.0",
@@ -16,6 +17,8 @@
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "cross-env": "^5.2.0",
+    "css-loader": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.11.1",
     "react-hot-loader": "^4.3.12",
@@ -23,8 +26,7 @@
     "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10",
-    "webpack-merge": "^4.1.4",
-    "cross-env": "^5.2.0"
+    "webpack-merge": "^4.1.4"
   },
   "scripts": {
     "start": "node_modules/.bin/cross-env NODE_ENV=development node_modules/.bin/webpack-dev-server --config ./webpack",
