--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,9 @@
     "presets": [
         "env",
         "react"
-    ]
+    ],
+    "plugins": [
+        "transform-runtime",
+        "transform-async-to-generator"
+      ]
 }
