--- a/package.json
+++ b/package.json
@@ -4,25 +4,34 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@babel/runtime": "^7.2.0",
+    "babel-polyfill": "^6.26.0",
     "jest": "^23.6.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
+    "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "style-loader": "^0.23.1"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.2.0",
     "babel": "^6.23.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.0.15",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.11.1",
     "react-hot-loader": "^4.3.12",
     "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10",
