--- a/package.json
+++ b/package.json
@@ -45,11 +45,16 @@
   "scripts": {
     "start": "node_modules/.bin/cross-env NODE_ENV=development node_modules/.bin/webpack-dev-server --config ./webpack",
     "build": "node_modules/.bin/cross-env NODE_ENV=production node_modules/.bin/webpack --config ./webpack",
-    "test": "node_modules/.bin/jest"
+    "test": "node_modules/.bin/jest",
+    "coverage": "node_modules/.bin/jest --coverage --coverageDirectory=dist/test-coverage"
   },
   "jest": {
     "roots": [
       "./src/components/"
+    ],
+    "coverageReporters": [
+      "text",
+      "html"
     ],
     "testPathIgnorePatterns": [
       "/node_modules/"
