--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.exclude": {
-        "**/node_modules": true
+        "**/node_modules": true,
+        "**/__snapshots__": true
     }
 }
