--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
-    "style-loader": "^0.23.1"
+    "style-loader": "^0.23.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.2.0",
@@ -24,7 +25,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.0.15",
+    "babel-preset-stage-0": "^6.24.1",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.1",
     "enzyme": "^3.8.0",
@@ -40,7 +41,7 @@
     "react-router-dom": "^4.3.1",
     "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10",
+    "webpack-dev-server": "^3.1.14",
     "webpack-merge": "^4.1.4"
   },
   "scripts": {
