--- a/.babelrc
+++ b/.babelrc
@@ -6,6 +6,7 @@
     ],
     "plugins": [
         "transform-runtime",
-        "transform-async-to-generator"
+        "transform-async-to-generator",
+        "syntax-dynamic-import"
       ]
 }
