--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "@babel/runtime": "^7.2.0",
+    "@babel/runtime": "^7.3.1",
     "babel-polyfill": "^6.26.0",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "express": "^4.16.4",
+    "isomorphic-fetch": "^2.2.1",
+    "mini-css-extract-plugin": "^0.5.0",
+    "npm-run-all": "^4.1.5",
+    "prop-types": "^15.6.2",
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
-    "style-loader": "^0.23.1",
+    "redux-saga": "^1.0.0",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
@@ -20,6 +25,7 @@
     "babel-core": "^6.26.3",
     "babel-jest": "^23.6.0",
     "babel-loader": "^7.1.5",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
@@ -31,20 +37,30 @@
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
     "enzyme-to-json": "^3.3.5",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.11.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
+    "mini-css-extract-plugin": "^0.4.0",
     "protractor": "^5.4.2",
     "react-hot-loader": "^4.3.12",
     "react-router-dom": "^4.3.1",
+    "style-loader": "^0.23.1",
     "webpack": "^4.26.0",
+    "webpack-async-chunk-names-plugin": "^0.1.1",
     "webpack-cli": "^3.1.2",
+    "webpack-dev-middleware": "^3.5.1",
     "webpack-dev-server": "^3.1.14",
-    "webpack-merge": "^4.1.4"
+    "webpack-hot-middleware": "^2.24.3",
+    "webpack-hot-server-middleware": "^0.5.0",
+    "webpack-merge": "^4.1.4",
+    "webpack-node-externals": "^1.7.2"
   },
   "scripts": {
-    "start": "node_modules/.bin/cross-env NODE_ENV=development node_modules/.bin/webpack-dev-server --config ./webpack",
+    "dev": "cross-env NODE_ENV=development node ./src/server",
+    "server": "node_modules/.bin/cross-env NODE_ENV=development node ./src/server",
+    "client": "node_modules/.bin/cross-env NODE_ENV=development node_modules/.bin/webpack-dev-server --config ./webpack",
     "build": "node_modules/.bin/cross-env NODE_ENV=production node_modules/.bin/webpack --config ./webpack",
     "test": "node_modules/.bin/jest",
     "coverage": "node_modules/.bin/jest  --updateSnapshot --coverage --coverageDirectory=dist/test-coverage",
