--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
     "presets": [
         "env",
+        "flow",
         "react",
         "stage-0"
     ],
@@ -8,5 +9,5 @@
         "transform-runtime",
         "transform-async-to-generator",
         "syntax-dynamic-import"
-      ]
+    ]
 }
