--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.0",
-    "redux-thunk": "^2.3.0",    
+    "redux-thunk": "^2.3.0",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
     "enzyme-to-json": "^3.3.5"
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.2.0",
     "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
@@ -34,10 +35,11 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.0.15",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "cross-env": "^5.2.0",
-    "css-loader": "^1.0.1",    
+    "css-loader": "^1.0.1",
     "eslint": "^5.13.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
@@ -61,7 +63,8 @@
     "webpack-hot-middleware": "^2.24.3",
     "webpack-hot-server-middleware": "^0.5.0",
     "webpack-merge": "^4.1.4",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-node-externals": "^1.7.2",
+    "flow-bin": "^0.92.1"
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development node ./src/server",
@@ -71,7 +74,8 @@
     "test": "node_modules/.bin/jest",
     "coverage": "node_modules/.bin/jest  --updateSnapshot --coverage --coverageDirectory=dist/test-coverage",
     "e2e": "node_modules/.bin/protractor e2e/protractor.conf.js",
-    "lint": "node_modules/.bin/eslint ./ --cache --ignore-pattern .gitignore --fix"
+    "lint": "node_modules/.bin/eslint ./ --cache --ignore-pattern .gitignore --fix",
+    "flow": "flow"
   },
   "jest": {
     "roots": [
