--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "dependencies": {
     "@babel/runtime": "^7.3.1",
     "babel-polyfill": "^6.26.0",
+    "bootstrap": "^4.2.1",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
+    "enzyme-to-json": "^3.3.5",
     "express": "^4.16.4",
     "isomorphic-fetch": "^2.2.1",
     "mini-css-extract-plugin": "^0.5.0",
@@ -15,12 +19,10 @@
     "react-dom": "^16.8.0",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
+    "reactstrap": "^7.1.0",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.0",
-    "redux-thunk": "^2.3.0",
-    "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.7.1",
-    "enzyme-to-json": "^3.3.5"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.2.0",
