--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
+    "react-jss": "^8.6.1",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "reactstrap": "^7.1.0",
@@ -47,11 +48,14 @@
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
+    "flow-bin": "^0.92.1",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.11.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
+    "jss": "^9.8.7",
+    "jss-preset-default": "^10.0.0-alpha.7",
     "mini-css-extract-plugin": "^0.4.0",
     "protractor": "^5.4.2",
     "react-hot-loader": "^4.3.12",
@@ -65,8 +69,7 @@
     "webpack-hot-middleware": "^2.24.3",
     "webpack-hot-server-middleware": "^0.5.0",
     "webpack-merge": "^4.1.4",
-    "webpack-node-externals": "^1.7.2",
-    "flow-bin": "^0.92.1"
+    "webpack-node-externals": "^1.7.2"
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development node ./src/server",
